# keycloak

rust-migration/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ROADMAP.md
rust-migration/.cargo/: audit.toml
rust-migration/.githooks/: pre-commit
rust-migration/.github/workflows/: ci.yml
rust-migration/crates/kc-admin-api/: Cargo.toml
rust-migration/crates/kc-admin-api/src/: auth.rs  error.rs  events.rs  import_export.rs  lib.rs  router.rs  state.rs
rust-migration/crates/kc-admin-api/src/dto/: client.rs  group.rs  mod.rs  realm.rs  role.rs  user.rs
rust-migration/crates/kc-auth/: Cargo.toml
rust-migration/crates/kc-auth/src/: authenticator.rs  error.rs  flow.rs  lib.rs  otp.rs  password.rs
rust-migration/crates/kc-cache/: Cargo.toml
rust-migration/crates/kc-cache-redis/: Cargo.toml
rust-migration/crates/kc-cache-redis/src/: config.rs  error.rs  lib.rs  provider.rs  session.rs
rust-migration/crates/kc-cache/src/: action_token.rs  error.rs  lib.rs  provider.rs  revocation.rs  session.rs
rust-migration/crates/kc-cli/: Cargo.toml
rust-migration/crates/kc-cli/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  output.rs
rust-migration/crates/kc-cli/src/commands/: client.rs  config.rs  crypto.rs  export.rs  group.rs  import.rs  mod.rs  realm.rs  role.rs  status.rs  user.rs
rust-migration/crates/kc-core/: Cargo.toml
rust-migration/crates/kc-core/src/: config.rs  error.rs  event.rs  lib.rs
rust-migration/crates/kc-crypto/: Cargo.toml
rust-migration/crates/kc-crypto/src/: algorithm.rs  hash.rs  keys.rs  legacy.rs  lib.rs  random.rs  signature.rs
rust-migration/crates/kc-federation/: Cargo.toml
rust-migration/crates/kc-federation-ldap/: Cargo.toml
rust-migration/crates/kc-federation-ldap/src/: config.rs  connection.rs  error.rs  lib.rs  mapper.rs  provider.rs  search.rs
rust-migration/crates/kc-federation/src/: config.rs  error.rs  lib.rs  mapper.rs  provider.rs  sync.rs
rust-migration/crates/kc-model/: Cargo.toml
rust-migration/crates/kc-model/src/: client.rs  credential.rs  group.rs  lib.rs  realm.rs  role.rs  user.rs
rust-migration/crates/kc-protocol-oidc/: Cargo.toml
rust-migration/crates/kc-protocol-oidc/src/: claims.rs  discovery.rs  error.rs  jwks.rs  lib.rs  mapper.rs  provider.rs  request.rs  token.rs  types.rs
rust-migration/crates/kc-protocol-oidc/src/endpoints/: authorization.rs  client_auth.rs  discovery.rs  grants.rs  introspection.rs  mod.rs  revocation.rs  router.rs  state.rs  token.rs  userinfo.rs
rust-migration/crates/kc-protocol-saml/: Cargo.toml
rust-migration/crates/kc-protocol-saml/src/: error.rs  lib.rs
rust-migration/crates/kc-protocol-saml/src/bindings/: mod.rs  post.rs  redirect.rs
rust-migration/crates/kc-protocol-saml/src/endpoints/: metadata.rs  mod.rs  router.rs  sls.rs  sso.rs  state.rs
rust-migration/crates/kc-protocol-saml/src/signature/: mod.rs  signer.rs  validator.rs
rust-migration/crates/kc-protocol-saml/src/types/: assertion.rs  authn_request.rs  constants.rs  logout.rs  mod.rs  name_id.rs  response.rs  status.rs
rust-migration/crates/kc-server/: Cargo.toml
rust-migration/crates/kc-server/src/: config.rs  dev_saml_cert.der  dev_saml_key.der  lib.rs  main.rs  providers.rs  router.rs  saml_handlers.rs  saml_ui.rs  state.rs  ui.rs
rust-migration/crates/kc-server/templates/: base.html  consent.html  error.html  login.html  logout.html  saml_login.html
rust-migration/crates/kc-session/: Cargo.toml
rust-migration/crates/kc-session/src/: auth_session.rs  client_session.rs  error.rs  lib.rs  provider.rs  user_session.rs
rust-migration/crates/kc-spi/: Cargo.toml
rust-migration/crates/kc-spi/src/: lib.rs  provider.rs  registry.rs  session.rs
rust-migration/crates/kc-storage/: Cargo.toml
rust-migration/crates/kc-storage-sql/: Cargo.toml
rust-migration/crates/kc-storage-sql/src/: client.rs  convert.rs  credential.rs  entities.rs  error.rs  group.rs  lib.rs  pool.rs  realm.rs  role.rs  user.rs
rust-migration/crates/kc-storage/src/: client.rs  credential.rs  error.rs  group.rs  lib.rs  realm.rs  role.rs  user.rs
rust-migration/deploy/docker/: docker-compose.yml  init-db.sql
rust-migration/deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  pdb.yaml  secret.yaml  service.yaml
rust-migration/docs/: DEPLOYMENT.md  NIST-800-53-CONTROLS.md  QUICKSTART.md
rust-migration/migrations/: 20240101000000_initial_schema.down.sql  20240101000000_initial_schema.sql
rust-migration/tests/conformance/: Cargo.toml  README.md  docker-compose.yml
rust-migration/tests/conformance/tests/: basic_op.rs  config_op.rs  harness.rs  hybrid_op.rs  implicit_op.rs  introspection.rs  main.rs  revocation.rs  token_endpoint.rs  userinfo.rs
rust-migration/tests/integration/: Cargo.toml
rust-migration/tests/integration/tests/: admin_api.rs  auth_flows.rs  common.rs  main.rs  saml_endpoints.rs  token_operations.rs
rust-migration/tests/load/: Cargo.toml  README.md
rust-migration/tests/load/src/: main.rs
