[package]
name = "kc-admin-api"
description = "Admin REST API for Keycloak Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kc-core = { workspace = true }
kc-model = { workspace = true }
kc-spi = { workspace = true }
kc-storage = { workspace = true }
kc-auth = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# Web
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
