[package]
name = "kc-cli"
description = "CLI tools for Keycloak Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "kc"
path = "src/main.rs"

[dependencies]
kc-core = { workspace = true }
kc-crypto = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
