[package]
name = "kc-federation-ldap"
description = "LDAP federation provider for Keycloak Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kc-core = { workspace = true }
kc-model = { workspace = true }
kc-spi = { workspace = true }
kc-federation = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# LDAP
ldap3 = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
testcontainers = { workspace = true }

[lints]
workspace = true
