[package]
name = "kc-model"
description = "Domain models for Keycloak Rust (User, Realm, Client, etc.)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kc-core = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
