[package]
name = "kc-protocol-oidc"
description = "OpenID Connect protocol implementation for Keycloak Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kc-core = { workspace = true }
kc-crypto = { workspace = true }
kc-model = { workspace = true }
kc-spi = { workspace = true }
kc-auth = { workspace = true }
kc-session = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# Web
axum = { workspace = true }

# JWT
jsonwebtoken = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
urlencoding = "2.1"

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
