[package]
name = "kc-protocol-saml"
description = "SAML 2.0 protocol implementation for Keycloak Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kc-core = { workspace = true }
kc-crypto = { workspace = true }
kc-model = { workspace = true }
kc-spi = { workspace = true }
kc-session = { workspace = true }
kc-storage = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# Web
axum = { workspace = true }

# XML processing
quick-xml = { version = "0.37", features = ["serialize"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
flate2 = "1.0"
urlencoding = "2.1"

# Cryptography
x509-parser = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[features]
default = []

[lints]
workspace = true
