[package]
name = "kc-spi"
description = "Service Provider Interface (SPI) traits for Keycloak Rust extensibility"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kc-core = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# Utilities
dashmap = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
