[package]
name = "kc-load-tests"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "load-test"
path = "src/main.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time and metrics
chrono = "0.4"

# Random data generation
rand = "0.8"

# Progress display
indicatif = "0.17"

# Statistics
hdrhistogram = "7.5"

# Async channel
async-channel = "2.3"

# Error handling
anyhow = "1.0"
